<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
<!--            android:src=""-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5">
        <EditText
            android:id="@+id/usuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/textoLogin" />

        <EditText
            android:id="@+id/usuarioSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/textoSenha"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/botaoAcessar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorBtNovoProduto"
            android:textColor="@color/corBrancaParaTexto"
            android:text="@string/textoEntrar" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vetor_mulher_carrinho" />
    </LinearLayout>
</LinearLayout>