<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NovoPedidoActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--  Inicio configurações cabeçalho-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloCabecalho"
                    android:theme="@style/FontTitulo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/TextoCabecalho">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_weight="0.5">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textoCliente"/>
                    <EditText
                        android:id="@+id/idNomeCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textoEndereço"/>
                    <EditText
                        android:id="@+id/idEnderecoCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/dataPedido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!--  Inicio configurações carrinho-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btExibirCarrinho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/tituloCarrinho"
                android:theme="@style/FontTitulo"
                android:background="@color/colorbackgroud"
                android:textAllCaps="false"
                android:paddingRight="140dp"
                android:paddingLeft="80dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_24px"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button android:id="@+id/btAddProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adicionar Produto"
                android:textAllCaps="false"
                android:theme="@style/TextoResumo"
                android:layout_margin="20dp"
                android:background="@drawable/botao_sem_cor_fundo"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/idLinearTeste"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProdutosCabecalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/adapter_itens_do_pedido"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <!--  Inicio configurações resumo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/TextoResumo"
                android:textAlignment="center"
                android:orientation="vertical"
                android:layout_weight="0.5">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tituloResumo"
                        android:theme="@style/FontTitulo"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textoTotalProdutos"
                        android:layout_weight="0.5" />

                    <TextView android:id="@+id/idTextResumoTotalProdutos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$0.00"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textoTotalItens"
                        android:layout_weight="0.5"/>

                    <TextView android:id="@+id/idTextResumoTotalItens"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$0.00"
                        android:layout_weight="0.5"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textoValorTotal"
                        android:layout_weight="0.5"/>
                    <TextView  android:id="@+id/idTextResumoValorTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$0.00"
                        android:layout_weight="0.5"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_weight="0.5">

                <Button android:id="@+id/btGravarPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gravar Pedido"
                    android:textColor="#FFF"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/botoes_acoes_principais"
                    android:theme="@style/BotaoGravar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>